Initial. Iniciada parte de JSP. Add home.jsp. Add index.html. Add Dispatcher.java. Update pom.xml por error en la construccion del proyecto.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,9 +6,9 @@
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="expires" content="-1">
 
-<meta http-equiv="refresh" content="0; url=VotacionesApp/jsp/home" />
+<meta http-equiv="refresh" content="0; url=/VotacionesApp/jsp/home" />
 </head>
 <body>
-	<p>Página por defecto, arrancando servlet...</p>
+	<img alt="Cargando..." src="resources/images/cargando.gif">
 </body>
 </html>
