--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,9 +6,14 @@
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="expires" content="-1">
 
-<meta http-equiv="refresh" content="0; url=/VotacionesApp/jsp/home" />
 </head>
 <body>
-	<img alt="Cargando..." src="resources/images/cargando.gif">
+	Página por defecto, servlet cargado..
+	<p>
+		<a href="/VotacionesApp/jsp/home">VotacionesApp JSP</a>
+	</p>
+	<p>
+		<a href="/VotacionesApp/viewsJSF/home.jsf">VotacionesApp JSF</a>
+	</p>
 </body>
 </html>
