--- a/src/main/webapp/viewsJSF/eliminarTema.xhtml
+++ b/src/main/webapp/viewsJSF/eliminarTema.xhtml
@@ -5,18 +5,13 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
-	<title>Votaciones App</title>
+	<title>Eliminar Tema</title>
 </h:head>
 <h:body>
-	<h1>VotacionesApp</h1>
+	<h1>Eliminar Tema</h1>
+	
 	<p>
-		<h:link value="Ver Temas" outcome="verTemas"/>
-	</p>
-	<p>
-		<h:link value="Eliminar Tema" outcome="eliminarTema"/>
-	</p>
-	<p>
-		<h:link value="Añadir Tema" outcome="aniadirTema"/>
+		<h:link value="Atrás" outcome="home"/>
 	</p>	
 </h:body>
 </html>
