--- a/src/main/webapp/viewsJsf/aniadirTema.xhtml
+++ b/src/main/webapp/viewsJsf/aniadirTema.xhtml
@@ -17,7 +17,7 @@
 		<h:outputText value="Pregunta: " /><h:inputText value="#{aniadirTemaView.preguntaTema}" />
 	</p>	
 		<h:commandButton value="Añadir" 
-				action="#{aniadirTemaView.process}" /><!-- ver que poner en process -->
+				action="#{aniadirTemaView.process}" />
 	</h:form>
 	<p>
 		<h:link value="Atrás" outcome="home"/>
