--- a/src/main/webapp/viewsJsf/home.xhtml
+++ b/src/main/webapp/viewsJsf/home.xhtml
@@ -13,7 +13,7 @@
 		<h:link value="Ver Temas" outcome="verTemas"/>
 	</p>
 	<p>
-		<h:link value="Eliminar Tema" outcome="eliminarTema"/>
+		<h:link value="Eliminar Tema" outcome="introducirIdentificador"/>
 	</p>
 	<p>
 		<h:link value="Añadir Tema" outcome="aniadirTema"/>
